<resources>
    <string name="app_name">Eight Bits</string>

    <!--Tela de escolha de app-->
    <string name="chooseInsta">Escolha o aplicativo</string>
    <string name="chooseEmail">Enviar e-mail</string>

    <!--Legenda dos Botões-->
    <string name="home">Home</string>
    <string name="cat">Categorias</string>
    <string name="info">Informações</string>

    <!--Títulos de Páginas-->
    <string name="titulo_home">Home</string>
    <string name="titulo_info">Informações</string>
    <string name="titulo_cat">Categorias</string>

    <!--Logotipo-->
    <string name="logopt1">8</string>
    <string name="logopt2">b</string>

    <!--Página Home-->
    <string name="promo_monitor">Monitores em promoção</string>
    <string name="toastSensor">Esta tela não suporta o modo retrato!</string>

    <!--Página de Categorias-->
    <string name="titulo_headset">Headsets</string>
    <string name="titulo_mouse">Mouses</string>
    <string name="titulo_teclado">Teclados</string>
    <string name="titulo_monitor">Monitores</string>
    <string name="titulo_ofertas">Ofertas</string>

    <!--Página de Informações-->
    <string name="contatos">Clique para nos contatar</string>

    <!--Página de Razer-->
    <string name="razer_Mouses">Mouses</string>

    <!--Página HyperX-->
    <string name="hyperx_Kit">Conjuntos</string>

    <!--Página de Compras-->
    <string name="endereco">"Endereço: %1$s  \n \n Horário: %4$tr"</string>
    <string name="loading">Carregando…</string>
    <string name="parar_busca">PARAR BUSCA</string>
    <string name="iniciar_busca">INICIAR</string>
    <string name="hint">Clique no botão para inicia</string>
    <string name="permissao_recusada">Permissão negada, autorize a aplicação </string>
    <string name="sem_localizacao">Localização Indisponível</string>
    <string name="sem_endereco">Endereço indisponível</string>
    <string name="coordenada_invalida">Coordenadas inválidas</string>
    <string name="servico_indisponivel">Esse serviço está indisponível</string>


</resources>
