<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    tools:context=".activity_cat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar9"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar8"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="34dp"
        android:layout_height="67dp"
        android:layout_marginBottom="3dp"
        android:elegantTextHeight="false"
        android:fontFamily="sans-serif-medium"
        android:text="@string/logopt1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/toolbar9"
        app:layout_constraintEnd_toEndOf="@+id/toolbar7"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/toolbar7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="24dp"
        android:layout_height="46dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/averia_sans_libre_bold"
        android:text="@string/logopt2"
        android:textColor="#FFFFFF"
        android:textSize="41sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar9"
        app:layout_constraintEnd_toEndOf="@+id/toolbar7"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/toolbar7"
        app:layout_constraintTop_toTopOf="@+id/toolbar7"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:text="@string/titulo_cat"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar9"
        app:layout_constraintEnd_toEndOf="@+id/toolbar9"
        app:layout_constraintStart_toStartOf="@+id/toolbar9"
        app:layout_constraintTop_toTopOf="@+id/toolbar9" />

    <ImageButton
        android:id="@+id/btnHome3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar8"
        app:layout_constraintEnd_toEndOf="@+id/toolbar8"
        app:layout_constraintStart_toStartOf="@+id/toolbar8"
        app:layout_constraintTop_toTopOf="@+id/toolbar8"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/btnInfo3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:adjustViewBounds="false"
        android:background="#FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar8"
        app:layout_constraintEnd_toEndOf="@+id/toolbar8"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/btnHome3"
        app:layout_constraintTop_toTopOf="@+id/toolbar8"
        app:srcCompat="@drawable/info__5_" />

    <ImageButton
        android:id="@+id/btnMenuCat3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar8"
        app:layout_constraintEnd_toStartOf="@+id/btnHome3"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@+id/toolbar8"
        app:layout_constraintTop_toTopOf="@+id/toolbar8"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@drawable/menu__1_" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:text="@string/home"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar8"
        app:layout_constraintTop_toTopOf="@+id/toolbar8"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:text="@string/info"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar8"
        app:layout_constraintEnd_toEndOf="@+id/toolbar8"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/toolbar8"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:text="@string/cat"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar8"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/toolbar8"
        app:layout_constraintTop_toTopOf="@+id/toolbar8"
        app:layout_constraintVertical_bias="0.82" />
</androidx.constraintlayout.widget.ConstraintLayout>